# SWAG-BMM

./: .gitignore  README.md  index.html  pyproject.toml
swaglib/: setup.py
swaglib/data/: arxiv.py  utils.py
swaglib/demo/: sgfs_demo.py  sgld_demo.py
swaglib/optim/: sgdVEM.py  sgdentropyestimator.py  sgfs.py  sgld.py  utils.py
tests/: sgdVEM_test.py  sgdentropyestimator_test.py  sgfs_test.py  sgld_test.py
