[tool.poetry]
name = "swag-bmm"
version = "0.1.0"
description = "a library for the evidence lower bound approach implementation for the Bayesian inference over deep neural networks"
authors = ["Andron00e, BungaBonga, lxstsvnd, alshestt"]
license = "Apache 2.0"
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.10"
pytorch = "^1.0.2"
scipy = "^1.14.1"
transformers = "^4.45.2"
peft = "^0.13.0"
datasets = "^3.0.1"
torchvision = "^0.19.1"
matplotlib = "^3.9.2"
seaborn = "^0.13.2"
evaluate = "^0.4.3"
einops = "^0.8.0"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
